# cppServer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  config.hpp  main.cpp
src/controller/: CMakeLists.txt  base.hpp  index.hpp  init_router.hpp
src/controller/api/: login.hpp
src/utils/: token.hpp
src/web/: init.hpp  middleware.hpp  router.hpp  routers.hpp  server.hpp  session.hpp
src/web/middlewares/: authentication.hpp  token.hpp  url_parser.hpp
